<resources>
    <string name="app_name">OneShot</string>
    <string name="root_ok">Root: granted ✓</string>
    <string name="root_missing">Root: NOT available ✗</string>
    <string name="hint_iface">Interface (e.g. wlan0)</string>
    <string name="hint_args">Flags (default -K). e.g. -b AA:BB:CC:DD:EE:FF -K  |  -B  |  --pbc</string>
    <string name="btn_check">Check Root</string>
    <string name="btn_install">Install Payload</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
</resources>
